WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131783
[Cocoa] _userInitiated is always NO in WKNavigationAction passed to -webView:createWebViewWithConfiguration:forNavigationAction:windowFeatures:
https://bugs.webkit.org/show_bug.cgi?id=131783
Summary
[Cocoa] _userInitiated is always NO in WKNavigationAction passed to -webView:...
mitz
Reported
2014-04-16 19:53:02 PDT
<
rdar://problem/16601336
> _userInitiated is always NO in WKNavigationAction passed to -webView:createWebViewWithConfiguration:forNavigationAction:windowFeatures: The reason it’s NO is that the value is decided based on ScriptController::processingUserGesture() at the time WebChromeClient::createWindow() is called, which is only after the policy decision has been made. By then, processingUserGesture() is false.
Attachments
Add and use a processionUserGesture flag on NavigationAction
(7.34 KB, patch)
2014-04-16 19:59 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-04-16 19:59:02 PDT
Created
attachment 229516
[details]
Add and use a processionUserGesture flag on NavigationAction
WebKit Commit Bot
Comment 2
2014-04-16 20:01:01 PDT
Attachment 229516
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:75: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/loader/NavigationAction.cpp:92: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-04-17 07:00:55 PDT
Fixed in <
http://trac.webkit.org/r167425
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug